--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,34 +4,10 @@
 * {
   font-family: sans-serif;
 }
-
-:root {
-  --Secondbm: #01629c;
-  --light: #00fff9;
-  --BleuM: rgb(0, 41, 111)
-}
-
-.header input::placeholder {
-  color: rgba(255, 255, 255, 0.534);
-}
-
-.movie {
-  box-shadow: 0px 0px 5px 0px black;
-}
-
-.activTab {
-  width: 100%;
-  opacity: 1;
-}
-
-.Tabsbutton:hover {
-  transition: 1s;
-}
-
 #tabs::-webkit-scrollbar {
   display: none;
 }
 
 .tabsButton {
-  @apply p-1 px-2 flex rounded-xl items-center hover:scale-105 duration-500 hover:transition hover:opacity-100
+  @apply p-1 px-2 flex rounded-md items-center hover:scale-105 duration-200 hover:transition hover:opacity-100
 }
